--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Anime Instagram Post</title>
     
     <!-- Verbesserte Meta-Tags für Discord-Vorschau -->
-    <meta property="og:title" content="Neuer Anime Instagram Post! 😍">
-    <meta property="og:description" content="Mein Lieblings-Anime! Wer schaut auch gerade die neue Staffel? #anime #manga #otaku">
+    <meta property="og:title" content="Twich Fischi Mobbing Tool">
+    <meta property="og:description" content="Twitch Chat Fischi Mobbing Tool">
     <meta property="og:image" content="https://images.unsplash.com/photo-1578632767115-351597cf2477?ixlib=rb-4.0.3">
     <meta property="og:image:secure_url" content="https://images.unsplash.com/photo-1578632767115-351597cf2477?ixlib=rb-4.0.3">
     <meta property="og:image:type" content="image/jpeg">
