--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   	<meta http-equiv="refresh" content="0; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+   	<meta http-equiv="refresh" content="0; URL=https://www.you#tube.com/watch?v=dQw4w9WgXcQ">
     <title>Anime Instagram Post</title>
     
     <!-- Verbesserte Meta-Tags für Discord-Vorschau -->
