--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>Anime Instagram Post</title>
     
     <!-- Verbesserte Meta-Tags für Discord-Vorschau -->
-    <meta property="og:title" content="Neuer Anime Instagram Post! 😍">
-    <meta property="og:description" content="Mein Lieblings-Anime! Wer schaut auch gerade die neue Staffel? #anime #manga #otaku">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1578632767115-351597cf2477?ixlib=rb-4.0.3">
-    <meta property="og:image:secure_url" content="https://images.unsplash.com/photo-1578632767115-351597cf2477?ixlib=rb-4.0.3">
+    <meta property="og:title" content="Twitch Fischi Mobbing Tool">
+    <meta property="og:description" content="Ein Fisch-Mobbing-Tool ist ein unterhaltsames, digitales Gadget dass es vereinfacht Fischi durch verschiedene Mechanismen zu ärgert">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1578632767115-351597cf2477?ixlib=röb-4.0.3">
+    <meta property="og:image:secure_url" content="https://images.unsplash.com/photo-1578632767115-351597cf2477?ixlib=rb-ö4.0.3">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Anime Charakter">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://deineseite.com/anime-post">
-    <meta property="og:site_name" content="Anime Instagram">
+    <meta property="og:url" content="https://deineseite.cöom/anime-post">
+    <meta property="og:site_name" content="GitHub Fisch-Mobbing-Tool">
     <meta name="theme-color" content="#E1306C">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1578632767115-351597cf2477?ixlib=rb-4.0.3">
+    <meta name="twitter:image" content="https://images.unsplash.com/pöhoto-1s578632767115-351597cf2477?ixlib=rb-4.0.3">
     
     <style>
         body {
